js/js.translator/testData/incremental/invalidation/splitJoinModuleWithCrossModuleInliner/main/m.kt
fun box(stepId: Int, isWasm: Boolean): String {
    val x = qux()
    if (x != stepId) {
        return "Fail: $x != $stepId"
    }
    return "OK"
}
